[project]
name = "7-t"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.15.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-deepseek>=1.1.0",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
]
